# python-clamd

./: .travis.yml  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml
clamd/: __init__.py
clammy/: __init__.py  exceptions.py
scripts/: clamd.conf  travis.sh
src/clamd/: __init__.py
tests/: test_clammy.py  test_python_clamd.py
