[tool.poetry]
name = "clamd"
version = "1.0.4"
description = "An interface to the ClamAV daemon"
authors = ["ranguli <hello@joshmurphy.ca>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
